--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -570,9 +570,16 @@ footer li:hover {
 }
 div#sub-mid {
   margin-top: -10px;
-  border-bottom: 1px solid rgb(226, 226, 226);
   padding-bottom: 3px;
   width: 100%;
+}
+#subscribe #sub-mid ul {
+  margin-top: 100px;
+}
+#subscribe #sub-bottom {
+  margin-top: 20px;
+  padding-top: -5px;
+  border-top: 1px solid rgb(226, 226, 226);
 }
 #subscribe #sub-mid li,
 #subscribe #sub-bottom li {
