--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,20 +113,10 @@ article {
   clear: both;
 }
 
-.more {
-  height: 80px;
-  width: 76%;
-  float: left;
-  background: #052;
-  margin: 2%;
-}
-
 .popular {
-  height: 80px;
-  width: 18%;
+  width: 25%;
   float: right;
-  background: #a40;
-  margin: 2% 2% 2% 0;
+  margin: 0 2% 2% 0;
 }
 
 .popular::after,
@@ -345,4 +335,123 @@ button:hover {
   color: rgb(102, 102, 102);
   font-size: 14px;
   font-weight: 500;
+}
+
+.more {
+  height: 100%;
+  width: 70%;
+  float: left;
+  margin: 18px 0 0 3%;
+}
+
+.more > * {
+  float: left;
+  width: 272px;
+  height: 300px;
+  margin-left: 3%;
+}
+.more> div >div> img{
+  width:100%;
+  height:181px;
+  
+}
+.image-wrap >span{
+  font-size: 10px;
+  color:rgb(153,153 ,153);
+  float:right;
+  }
+
+.more> div > h2{
+  color:#000;
+  text-align: left;
+  font-size: 18px;
+  line-height: 22px;
+  display: block;
+  font-family: inherit;
+  font-weight: 700;
+}
+
+.more> div > h2:hover{
+  color:#666;
+  cursor: pointer;
+}
+.more::after{
+  content: "";
+  clear: both;
+}
+.editors{
+  margin-left: 5%;
+  width: 70%;
+  font-family: inherit;
+  color: #000;
+  font-size: 18px;
+  
+}
+.editors > *{
+  width: 272px;
+  height: 300px;
+  float: left;
+}
+.editors > div:nth-of-type(2){
+margin-left: 4%;
+margin-right: 2.5%;
+}
+img[alt*="more"]{
+  width: 100%;
+}
+.editors > div >h2{
+  color:#000;
+  text-align: left;
+  font-size: 18px;
+  line-height: 22px;
+  display: block;
+  font-family: inherit;
+  font-weight: 700;
+}
+.editor-image-wrap >span{
+  font-size: 10px;
+  color:rgb(153,153 ,153);
+  float:right;
+  }
+  
+.editors> div > h2:hover{
+  color:#666;
+  cursor: pointer;
+}
+h4{
+  border-top:1px solid black;
+  width: 900px;
+  height: 32px;
+  margin-left: 5%;
+  padding-top:19px;
+  margin-top: 0;
+}
+h4:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
+h5{
+ width: 100px;
+ border-top:1px solid black;
+}
+
+.popular > p{ 
+  border-top:1px solid silver;
+  margin-top: 10px;
+  padding-top:20px;
+  font-size: 14px;
+  font-weight: 700;
+  color: rgb(18, 18, 18);
+  font-family:nyt-cheltenham, georgia, "times new roman", times, serif;
+}
+h6 >span{
+  border-top:1px solid black;
+  height: 32px;
+  padding-top:19px;
+  margin-right: 25%;
+  font-size: 14px;
+  width: 240px;
+  position: absolute;
+  transform: translate(0px,-99px);
+  width: 350px;
 }
